syntax = "proto3";

package actors.v1;

message TestReply {}
message TestPanic {}
message TestTimeout {}
message Reply {
  string content = 1;
}

message TestSend {}
